# PySIDT

./: .gitignore  README.md  environment.yml  pyproject.toml
.conda/: build.sh  conda_build_config.yaml  meta.yaml
.conda-rmg/: meta.yaml
.github/workflows/: CI.yml
IPython/: Habs_1000K_parallel_single_eval_SIDT_example.ipynb  Multi Eval SIDT Example.ipynb  Surface_Diffusion_single_eval_SIDT_example.ipynb  Unstable_QOOH_Binary_Classification.ipynb  multi_eval_SIDT_example.ipynb
data/: RMG_Habs_low_rank_adjlist_toAnEa_test.json  RMG_Habs_low_rank_adjlist_toAnEa_train.json  RMG_Habs_low_rank_adjlist_toAnEa_val.json
pysidt/: LICENSE.txt  __init__.py  decomposition.py  extensions.py  mol.py  plotting.py  regularization.py  sidt.py  utils.py
pysidt/data/: rmgdbH298CHOstablenoringnoads.json
tests/: utils.py
tests/data/: old_tree.json
