[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PySIDT"
version = "0.0.1"
authors = [
  { name="Matthew S. Johnson", email="mjohnson541@gmail.com" },
  { name="Judit Zador", email="jzador@sandia.gov" },
]
description = "A low-data machine learning algorithm for predicting chemical properties"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["pysidt"]

[project.optional-dependencies]
dev = ["black", "isort", "pytest", "nbmake"]

[project.urls]
Homepage = "https://github.com/zadorlab/PySIDT"
Issues = "https://github.com/zadorlab/PySIDT/issues"

[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true